--- a/static/css/base.css
+++ b/static/css/base.css
@@ -115,18 +115,20 @@ nav a:hover {
     text-decoration: underline;
 }
 header {
+    color: white;
     display: block;
     margin: auto;
-    background-color: #2c3e50;
+    background-color: burlywood;
     width: 100%;
     text-align: center;
     font:40px " Poppins", sans-serif;
 }
 
 a {
-    color: white;
+
     text-decoration: none;
     margin: 0 20px;
     font-size: 18px;
     transition: color 0.3s;
 }
+
